- Updated MovieCardGridItem style - added scrollbars indicator to Watchlist and History

--- a/MoviesApp/Localization/en.lproj/Localizable.strings
+++ b/MoviesApp/Localization/en.lproj/Localizable.strings
@@ -37,7 +37,7 @@
 "label-general-settings-section" = "General";
 
 "current-location-settings" = "Current Location";
-"streaming-platform-settings" = "Current Location";
+"streaming-platform-settings" = "Streaming platforms";
 "display-settings" = "Display";
 "storage-settings" = "Storage";
 "about-settings" = "About";
