--- a/MoviesApp/Localization/de.lproj/Localizable.strings
+++ b/MoviesApp/Localization/de.lproj/Localizable.strings
@@ -23,7 +23,7 @@
 "watchlist-empty-state" = "Bookmark movies to find them here";
 
 "movie-providers-title" = "Zum streamen verfügbar:";
-"close" = "Close";
+"close" = "schließen";
 
 "location-united-states" = "Vereinigte Staaten";
 "location-united-kingdom" = "Vereinigtes Königreich";
